--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
+    "typeface-cormorant": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
